--- a/Media-style.css
+++ b/Media-style.css
@@ -353,5 +353,443 @@
     align-content: center;
   }
 }
-@media (min-device-width: 731px) and (max-device-width: 850px) {
+@media (min-device-width: 731px) and (max-device-width: 900px) {
+  .text-router-navbar {
+    width: 20%;
+  }
+  .image-aside {
+    position: absolute;
+    z-index: -1;
+    height: 85%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .section-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    margin-top: 19%;
+    margin-left: 9%;
+    width: 80%;
+  }
+  .titel-body {
+    margin: -30px 0px 16px 0px;
+  }
+  .text-paragraph {
+    width: 5%;
+    margin-top: 6%;
+  }
+  .section-number2 {
+    position: absolute;
+    top: 85%;
+    width: 100%;
+    margin: 50px 0px 0px 0px;
+    display: flex;
+  }
+  .image-section-number2 {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px 0px 0px 40%;
+    height: 28rem;
+  }
+  .text-paragraph {
+    position: absolute;
+    margin: 0px 0px 0px 130px;
+    width: 40%;
+    margin-top: 6%;
+  }
+  .paragraphe-down {
+    width: 100%;
+    margin: 20px 0px 0px -45px;
+  }
+  .paragraphe-down-left {
+    width: 45%;
+  }
+  .paragraphe-down-right {
+    width: 45%;
+    margin: 0px 0px 0px 20px;
+  }
+  .section-number3 {
+    position: absolute;
+    top: 187%;
+    width: 100%;
+  }
+  .titel-paragraphe3 {
+    width: 80%;
+    margin: 0px 0px 0px 15px;
+  }
+  .section-number3-down {
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+  }
+  .number3-down-logo-left {
+    width: 80%;
+    margin: 50px 0px 0px 16px;
+  }
+  .footer-general {
+    position: absolute;
+    height: 25%;
+    width: 100%;
+    background-color: rgb(231, 236, 255);
+    top: 120%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+}
+@media (min-device-width: 901px) and (max-device-width: 1000px) {
+  .text-router-navbar {
+    width: 20%;
+  }
+  .image-aside {
+    position: absolute;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .section-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    margin-top: 19%;
+    margin-left: 9%;
+    width: 80%;
+  }
+  .titel-body {
+    margin: -30px 0px 16px 0px;
+  }
+  .text-paragraph {
+    width: 5%;
+    margin-top: 6%;
+  }
+  .section-number2 {
+    position: absolute;
+    top: 98%;
+    width: 100%;
+    margin: 50px 0px 0px 0px;
+    display: flex;
+  }
+  .image-section-number2 {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px 0px 0px 40%;
+    height: 28rem;
+  }
+  .text-paragraph {
+    position: absolute;
+    margin: 0px 0px 0px 130px;
+    width: 40%;
+    margin-top: 6%;
+  }
+  .paragraphe-down {
+    width: 100%;
+    margin: 20px 0px 0px -45px;
+  }
+  .paragraphe-down-left {
+    width: 45%;
+  }
+  .paragraphe-down-right {
+    width: 45%;
+    margin: 0px 0px 0px 20px;
+  }
+  .section-number3 {
+    position: absolute;
+    top: 225%;
+    width: 100%;
+  }
+  .titel-paragraphe3 {
+    width: 80%;
+    margin: 0px 0px 0px 15px;
+  }
+  .section-number3-down {
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+  }
+  .number3-down-logo-left {
+    width: 80%;
+    margin: 50px 0px 0px 16px;
+  }
+  .footer-general {
+    position: absolute;
+    height: 26%;
+    width: 100%;
+    background-color: rgb(231, 236, 255);
+    top: 150%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+}
+@media (min-device-width: 1001px) and (max-device-width: 1073px) {
+  .text-router-navbar {
+    width: 20%;
+  }
+  .image-aside {
+    position: absolute;
+    z-index: -1;
+    height: 125%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .section-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    margin-top: 19%;
+    margin-left: 9%;
+    width: 80%;
+  }
+  .titel-body {
+    margin: -30px 0px 16px 0px;
+  }
+  .text-paragraph {
+    width: 5%;
+    margin-top: 6%;
+  }
+  .section-number2 {
+    position: absolute;
+    top: 130%;
+    width: 100%;
+    margin: 50px 0px 0px 0px;
+    display: flex;
+  }
+  .image-section-number2 {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px 0px 0px 40%;
+    height: 28rem;
+  }
+  .text-paragraph {
+    position: absolute;
+    margin: 0px 0px 0px 130px;
+    width: 40%;
+    margin-top: 6%;
+  }
+  .paragraphe-down {
+    width: 100%;
+    margin: 20px 0px 0px -45px;
+  }
+  .paragraphe-down-left {
+    width: 45%;
+  }
+  .paragraphe-down-right {
+    width: 45%;
+    margin: 0px 0px 0px 20px;
+  }
+  .section-number3 {
+    position: absolute;
+    top: 270%;
+    width: 100%;
+  }
+  .titel-paragraphe3 {
+    width: 80%;
+    margin: 0px 0px 0px 15px;
+  }
+  .section-number3-down {
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+  }
+  .number3-down-logo-left {
+    width: 80%;
+    margin: 50px 0px 0px 16px;
+  }
+  .footer-general {
+    position: absolute;
+    height: 26%;
+    width: 100%;
+    background-color: rgb(231, 236, 255);
+    top: 180%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+}
+@media (min-device-width: 1074px) and (max-device-width: 1160px) {
+  .text-router-navbar {
+    width: 20%;
+  }
+  .image-aside {
+    position: absolute;
+    z-index: -1;
+    height: 130%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .section-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    margin-top: 19%;
+    margin-left: 9%;
+    width: 80%;
+  }
+  .titel-body {
+    margin: -30px 0px 16px 0px;
+  }
+  .text-paragraph {
+    width: 5%;
+    margin-top: 6%;
+  }
+  .section-number2 {
+    position: absolute;
+    top: 150%;
+    width: 100%;
+    margin: 50px 0px 0px 0px;
+    display: flex;
+  }
+  .image-section-number2 {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px 0px 0px 40%;
+    height: 28rem;
+  }
+  .text-paragraph {
+    position: absolute;
+    margin: 0px 0px 0px 130px;
+    width: 40%;
+    margin-top: 6%;
+  }
+  .paragraphe-down {
+    width: 100%;
+    margin: 20px 0px 0px -45px;
+  }
+  .paragraphe-down-left {
+    width: 45%;
+  }
+  .paragraphe-down-right {
+    width: 45%;
+    margin: 0px 0px 0px 20px;
+  }
+  .section-number3 {
+    position: absolute;
+    top: 290%;
+    width: 100%;
+  }
+  .titel-paragraphe3 {
+    width: 80%;
+    margin: 0px 0px 0px 15px;
+  }
+  .section-number3-down {
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+  }
+  .number3-down-logo-left {
+    width: 80%;
+    margin: 50px 0px 0px 16px;
+  }
+  .footer-general {
+    position: absolute;
+    height: 26%;
+    width: 100%;
+    background-color: rgb(231, 236, 255);
+    top: 180%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+}
+@media (min-device-width: 1161px) and (max-device-width: 1300px) {
+  .text-router-navbar {
+    width: 20%;
+  }
+  .image-aside {
+    position: absolute;
+    z-index: -1;
+    height: 130%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .section-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    margin-top: 19%;
+    margin-left: 9%;
+    width: 80%;
+  }
+  .titel-body {
+    margin: -30px 0px 16px 0px;
+  }
+  .text-paragraph {
+    width: 5%;
+    margin-top: 6%;
+  }
+  .section-number2 {
+    position: absolute;
+    top: 150%;
+    width: 100%;
+    margin: 50px 0px 0px 0px;
+    display: flex;
+  }
+  .image-section-number2 {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px 0px 0px 40%;
+    height: 28rem;
+  }
+  .text-paragraph {
+    position: absolute;
+    margin: 0px 0px 0px 130px;
+    width: 40%;
+    margin-top: 6%;
+  }
+  .paragraphe-down {
+    width: 100%;
+    margin: 20px 0px 0px -45px;
+  }
+  .paragraphe-down-left {
+    width: 45%;
+  }
+  .paragraphe-down-right {
+    width: 45%;
+    margin: 0px 0px 0px 20px;
+  }
+  .section-number3 {
+    position: absolute;
+    top: 290%;
+    width: 100%;
+  }
+  .titel-paragraphe3 {
+    width: 80%;
+    margin: 0px 0px 0px 15px;
+  }
+  .section-number3-down {
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+  }
+  .number3-down-logo-left {
+    width: 80%;
+    margin: 50px 0px 0px 16px;
+  }
+  .footer-general {
+    position: absolute;
+    height: 26%;
+    width: 100%;
+    background-color: rgb(231, 236, 255);
+    top: 180%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
 }
